# soredowe

./: Cargo.toml
.github/workflows/: aur-upload.yml  release.yml
crates/app_shell/: Cargo.toml
crates/app_shell/src/: main.rs
crates/app_ui/: Cargo.toml
crates/app_ui/src/: lib.rs  state.rs
crates/backend_aur/: Cargo.toml
crates/backend_aur/src/: lib.rs
crates/backend_pacman/: Cargo.toml
crates/backend_pacman/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
packaging/aur/heyday/: PKGBUILD
packaging/desktop/: heyday.desktop
packaging/flathub/: org.mlm_games.soredow.metainfo.xml
packaging/metainfo/: org.heyday.Heyday.metainfo.xml
packaging/snap/: snapcraft.yaml
