[package]
name = "app_shell"
version = "0.1.0"
edition = "2021"

[dependencies]
compose-platform = { path = "../../../repose/crates/compose-platform", features = [
    "desktop",
] }
compose-ui = { path = "../../../repose/crates/compose-ui" }
compose-core = { path = "../../../repose/crates/compose-core" }
crossbeam-channel = "0.5.15"
anyhow = "1"
env_logger = "0.11"
domain = { path = "../domain" }
backend_pacman = { path = "../backend_pacman" }
backend_aur = { path = "../backend_aur" }
app_ui = { path = "../app_ui" }
