[package]
name = "app_shell"
version = "0.1.0"
edition = "2024"

[dependencies]
repose-platform = { path = "../../../repose/crates/repose-platform", features = [
    "desktop",
] }
repose-ui = { path = "../../../repose/crates/repose-ui" }
repose-core = { path = "../../../repose/crates/repose-core" }
crossbeam-channel = "0.5.15"
anyhow = "1"
env_logger = "0.11"
domain = { path = "../domain" }
backend_pacman = { path = "../backend_pacman" }
backend_aur = { path = "../backend_aur" }
app_ui = { path = "../app_ui" }
notify = "8"
