[package]
name = "app_shell"
version = "0.1.1"
edition = "2024"

[dependencies]
repose-platform = { version = "*", features = ["desktop"] }
repose-ui = "*"
repose-core = "*"
crossbeam-channel = "0.5.15"
anyhow = "1"
env_logger = "0.11"
domain = { path = "../domain" }
backend_pacman = { path = "../backend_pacman" }
backend_aur = { path = "../backend_aur" }
app_ui = { path = "../app_ui" }
notify = "8"
